<resources>
    <string name="app_name">Piligram</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorites">Закладки</string>
    <string name="title_travels">Путешествия</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="message_please_wait">Пожалуйста, подождите…</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="all">Все</string>
    <string name="people">Люди</string>
    <string name="my_travels">Мои путешествия</string>
    <string name="splash_welcome_text">Поможет вам быстро найти компанию для путешествия</string>
    <string name="use_facebook">Использовать Facebook</string>
    <string name="btn_enter">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="enter_your_name">Как вас зовут?</string>
    <string name="reg_hint_your_name">Если вы укажете реальные данные, это вызовет больше доверия у других путешественников и вам будет проще найти компанию</string>
    <string name="reg_name_hint">ИМЯ</string>
    <string name="next">Далее</string>
    <string name="reg_email_hint">ЭЛЕКТРОННАЯ ПОЧТА</string>
    <string name="enter_email_address">Введите адрес вашей электронной почты</string>
    <string name="reg_parent_hint">ФАМИЛИЯ</string>
    <string name="enter_reg_password">Придумайте пароль</string>
    <string name="reg_hint_password">ПАРОЛЬ</string>
    <string name="reg_password_message">Придумайте сложный пароль - это поможет защитить ваш аккаунт</string>
    <string name="reg_birthday_message">Мы не публикуем дату рождения. Другие пользователи смогут видеть только ваш возраст.</string>
    <string name="enter_your_birthday">Введите дату вашего рождения</string>
    <string name="reg_birthday_hit">ДАТА РОЖДЕНИЯ</string>
    <string name="enter_your_sex">Укажите ваш пол</string>
    <string name="female_caps">ЖЕНЩИНА</string>
    <string name="male_caps">МУЖЧИНА</string>
    <string name="reg_avatar_message">Добавьте ваше любимое фото из путешествия или другую фотографию</string>
    <string name="enter_reg_avatar">Добавьте ваше фото</string>
    <string name="login_title">Войти</string>
    <string name="remember_password">Забыли пароль?</string>
    <string name="done">Готово</string>
    <!-- selimg -->
    <string name="select_from_gallery">Выбрать из галереи</string>
    <string name="select_from_camera">Сфотографировать</string>
    <string name="chooser_select_picture">Выберите приложение</string>
    <string name="continue_caps">ПРОДОЛЖИТЬ</string>
    <string name="skip_caps">ПРОПУСТИТЬ</string>
    <string name="reg_finish_message">Чтобы другие путешественники\nуже могли предложить вам компанию,\nрасскажите им, когда вы хотели бы\nпоехать в путешествие\n\nЭто могут быть не точные даты,\nа только ваши планы</string>
    <string name="btn_skip">Пропустить</string>
    <string name="thanks_with_as">Спасибо, что вы с нами!</string>
    <string name="a_few_seconds">еще несколько секунд</string>
    <string name="vacation_date_title">Даты отпуска</string>
    <string name="vacation_date_message">Выберите период, в который вы смогли бы поехать. Это может быть, например, все лето.</string>
    <string name="vacation_date_begin_title">Дата начала</string>
    <string name="vacation_date_end_title">Дата окончания</string>
    <string name="vacation_days_count_title">Длительность отпуска</string>
    <string name="vacation_days_count_message">На сколько дней вы смогли бы поехать</string>
    <string name="vacation_direction_title">Направление</string>
    <string name="vacation_direction_message">Куда вы хотели бы поехать</string>
    <string name="vacation_days_count">%d дней</string>
    <string name="travel_type_title">Какому типу наиболее соответствует ваше путешествие?</string>
    <string-array name="vacation_dates_select">
        <item>на</item>
        <item>до</item>
        <item>от</item>
    </string-array>
    <string-array name="vacation_direction">
        <item>Хоть куда!</item>
        <item>Россия</item>
        <item>Европа</item>
        <item>Азия</item>
        <item>Африка</item>
        <item>Австралия</item>
        <item>Северная Америка</item>
        <item>Южная Америка</item>
    </string-array>
    <string name="travels_type_item_active">Активный отдых</string>
    <string name="travels_type_item_beach">Пляжный отдых</string>
    <string name="travels_type_item_car">Поездка на автомобиле</string>
    <string name="travels_type_item_excursions">Экскурсии</string>
    <string name="travels_type_item_child">С детьми</string>
    <string name="travels_type_item_other">Другое</string>
    <string name="travel_cost_rent">Аренда жилья</string>
    <string name="travel_cost_transfer">Трансфер</string>
    <string name="travel_cost_insurance">Страховка</string>
    <string name="travel_cost_car_rent">Аренда авто</string>
    <string name="travel_cost_tickets">Билеты</string>
    <string name="travel_cost_title">Добавьте название и стоимость путешествия</string>
    <string name="travel_cost_title_hint">Каникулы в марокко</string>
    <string name="travel_cost_price_hint">руб./чел</string>
    <string name="travel_cost_price_label">Укажите стоимость в рублях на человека и что в нее включено:</string>
    <string name="travel_cost_title_label">Постарайтесь сделать заголовок коротким и информативным:</string>
    <string name="travel_cost_equipment">Аренда оборудования</string>
    <string name="travel_road_title">Опишите ваш маршрут</string>
    <string name="travel_date_title">Укажите даты вашего путешествия</string>
    <string name="travel_image_title">Выберите подходящую картинку</string>
    <string name="action_yes">Да</string>
    <string name="action_no">Нет</string>
    <string name="action_edit">Изменить</string>
    <string name="profile_my_vavation">Мои отпуска</string>
    <string name="action_add_vacation">Добавить отпуск</string>
    <string name="from">%1$s %2$s</string>
    <string name="item_profile_days">%1$s - %2$s</string>
    <string name="action_save">Сохранить</string>
    <string name="title_email">Email</string>
    <string name="title_phone_number">Мобильный телефон</string>
    <string name="title_name">Имя</string>
    <string name="title_parent_name">Фамилия</string>
    <string name="title_position">Род занятий</string>
    <string name="title_organisation">Организация</string>
    <string name="title_social">Социальные сети</string>
    <string name="people_years">, %d лет</string>
    <string name="people_place_where">Куда: %s</string>
    <string name="people_travel_date">Могу поехать: \\n%1$s - %2$s</string>
    <string name="travel_finish_message">Добавьте всего несколько строк описания вашего путешествия - это поможет привлечь гораздо больше участников</string>
    <string name="action_post">Опубликовать!</string>
    <string name="travel_description_hint">Напишите здесь, где лучше купить билеты на поезд или самолет, укажите о необходимости визы или автомобильных прав. Расскажите про трансфер до места и про варианты размещения</string>
    <string name="own_travel">Организую</string>
    <string name="participate_travel">Учавствую</string>
    <string name="action_add_travel">Добавить путешествие</string>
    <string name="own_travel_empty_message">Вы можете организовать свое собственное путешествие и оно появится в этом разделе</string>
    <string name="action_go_to_search">Перейти в поиск путешествий</string>
    <string name="travel_list_empty_message">К сожалению, мы еще не нашли для вас подходящих путешествий и компаний. Мы делаем все, чтобы исправить это.</string>

</resources>
