<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/shadow" />

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_12"
        android:layout_above="@+id/navigation" />

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/navigation_search"
            style="@style/BottomButtons"
            android:drawableTop="@drawable/ic_search"
            android:text="@string/title_search" />

        <TextView
            android:id="@+id/navigation_favorite"
            style="@style/BottomButtons"
            android:drawableTop="@drawable/ic_favorite"
            android:text="@string/title_favorites"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/navigation_travels"
            style="@style/BottomButtons"
            android:drawableTop="@drawable/ic_trabels"
            android:text="@string/title_travels" />

        <TextView
            android:id="@+id/navigation_message"
            style="@style/BottomButtons"
            android:drawableTop="@drawable/ic_message"
            android:text="@string/title_messages"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/navigation_profile"
            style="@style/BottomButtons"
            android:drawableTop="@drawable/ic_profile"
            android:text="@string/title_profile" />


    </LinearLayout>

</RelativeLayout>
