<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <!--<item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/title_favorites" />-->

    <item
        android:id="@+id/navigation_travels"
        android:icon="@drawable/ic_card_travel_black_24dp"
        android:title="@string/title_travels" />

     <!-- <item
         android:id="@+id/navigation_messages"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_messages" />-->

    <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_person_outline_black_24dp"
         android:title="@string/title_profile" />

</menu>
