<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackground"
        android:paddingBottom="12dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:text="@string/btn_enter"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btn_skip_vacation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackground"
        android:paddingBottom="12dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:text="@string/btn_skip"
        android:textAllCaps="true"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:src="@drawable/logo" />


        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="73dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/splash_welcome_text"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pg_loader"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="77dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/btn_fb_auth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_fb_button"
            android:gravity="center"
            android:text="@string/use_facebook"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_vk_auth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_fb_button"
            android:backgroundTint="#5a7ec7"
            android:gravity="center"
            android:text="@string/use_facebook"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_create_account_btn"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="#2553b4"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>