<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_caps"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        />


    <ImageView
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18.5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textColor="#111111"
        android:textSize="48sp"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#de000000"
        android:lineSpacingExtra="4sp"
        android:gravity="center_horizontal"
        tools:text="Спасибо, что вы с нами!"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#de000000"
        android:lineSpacingExtra="6sp"
        android:gravity="center_horizontal"
        tools:text="еще несколько секунд"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#8a000000"
        android:lineSpacingExtra="8sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_continue"
        android:text="@string/reg_finish_message"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_caps"
        style="@style/BlueBottomButton"/>

</RelativeLayout>